# transcribe

./: .gitignore  README.md  plot.py  pyproject.toml  record.ipynb  transcribe_online.py  whisper_online.py
src/: record.py
