[tool.poetry]
name = "record"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
faster-whisper = "^1.0.1"
scipy = "^1.12.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
mosestokenizer = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
